--- a/css/main.css
+++ b/css/main.css
@@ -27,26 +27,29 @@ p {
 }
 .next, .prev {
 	position: absolute;
-	width: 70px;
-	height: 9px;
 	z-index: 300;
 	cursor: pointer;
 	bottom: -10px;
 }
 .next {
-	background-image: url("../img/next.png");
+	font-size: 40px;
+	color: #e0a326;
+	right: 0;
 }
 .next:hover {
 	background-image: url("../img/next_hover.png");
 }
 .prev {
-	background-image: url("../img/prev.png");
+	font-size: 40px;
+	color: #e0a326;
+	left: 0;
 }
 .prev:hover {
 	background-image: url("../img/prev_hover.png");
 }
 .slider_wrapper {
 	position: relative;
+	display: none;
 }
 .slider_wrapper:after, .slider:after {
 	content: "";
@@ -235,69 +238,73 @@ footer .footer_wrapper {
 	margin: auto;
 	text-align: center;
 	position: relative;
+	background-color: #411e16;
+	border: 4px solid #e0a326;
+	max-width: 470px;
+	padding: 5rem 0;
 }
 .form_wrapper h6 {
-
+	font-weight: 500;
+	font-size: 3rem;
+	color: #e0a326;
 }
 .form_wrapper p {
-	
+	font-size: 2rem;
+	color: #e0a326;
 }
 label.error {
 	color: red;
 }
 .form input::-webkit-input-placeholder {
-	
+	font-size: 1.8rem;
+	color: #000;
 }
 .form input::-moz-placeholder {
-	
+	font-size: 1.8rem;
+	color: #000;
 }
 .form input:-ms-input-placeholder {
-	
+	font-size: 1.8rem;
+	color: #000;
 }
 .form input:-moz-placeholder {
-	
+	font-size: 1.8rem;
+	color: #000;
 }
 .form textarea::-webkit-input-placeholder {
-	
+	font-size: 1.8rem;
+	color: #000;
 }
 .form textarea::-moz-placeholder {
-	
+	font-size: 1.8rem;
+	color: #000;
 }
 .form textarea:-ms-input-placeholder {
-	
+	font-size: 1.8rem;
+	color: #000;
 }
 .form textarea:-moz-placeholder {
-	
-}
-.form input {
-	width: 100%;
-	-webkit-border-radius: 4px;
-	-ms-border-radius: 4px;
-	-moz-border-radius: 4px;
-	-o-border-radius: 4px;
-	border-radius: 4px;
-	margin-top: 20px;
+	font-size: 1.8rem;
 	color: #000;
+}
+.form input, select {
+	width: 100%;
+	max-width: 370px;
+	-webkit-border-radius: 3px;
+	-ms-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-o-border-radius: 3px;
+	border-radius: 3px;
+	margin-top: 15px;
+	color: #000;
+	height: 60px;
+	border: 0;
+	text-indent: 3rem;
 }
 .form button {
 	width: 100%;
 	max-width: 370px;
-}
-.btn_main {
-	height: 60px;
-	border: solid 2px #000;
-	width: 100%;
-	max-width: 370px;
-	font-size: 13px;
-	color: #000;
-	-webkit-transition: all .3s;
-	-moz-transition: all .3s;
-	-ms-transition: all .3s;
-	transition: all .3s;
-}
-.btn_main:hover {
-	color: #fff;
-	background-color: #000;
+	margin-top: 15px;
 }
 .top_desc {
 	font-size: 3.6rem;
@@ -335,7 +342,7 @@ main .container {
 	bottom: 0;
 	left: 0;
 	padding-bottom: 1.8rem;
-	display: -webkit-box;
+	/*display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
@@ -348,15 +355,18 @@ main .container {
 	-webkit-flex-align: center;
 	-ms-flex-align: center;
 	-webkit-align-items: center;
-	align-items: center;
+	align-items: center;*/
 }
 .main_contact .phone {
 	font-weight: 500;
 	font-size: 2rem;
+	float: right;
+	padding-top: 1rem;
 }
 .main_contact .adress {
 	font-size: 1.6rem;
 	line-height: 2.4rem;
+	float: left;
 }
 .main_contact .phone a {
 	margin-left: 4rem;
@@ -400,6 +410,9 @@ main .container {
 	font-size: 16px;
 	letter-spacing: .1em;
 	font-weight: bold;
+}
+.lang li.active {
+	border-bottom: 2px solid #e0a326;
 }
 .menu {
 	background-color: #411e16;
@@ -485,6 +498,30 @@ main .container {
 	position: relative;
 	top: -5px;
 }
+.main_btn {
+	width: 100%;
+	max-width: 370px;
+	color: #762b10;
+	height: 60px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	background-color: #c78f23;
+	font-size: 1.8rem;
+	letter-spacing: .03em;
+	font-weight: 500;
+	-webkit-transition: all .3s;
+	-moz-transition: all .3s;
+	-ms-transition: all .3s;
+	transition: all .3s;
+}
+.mfp-close-btn-in .mfp-close {
+	color: #c78f23!important;
+}
+.main_btn:hover {
+	background-color: #762b10;
+	color: #c78f23;
+}
 .menu--scrolled_wrapper {
 	height: 160px;
 	display: -webkit-box;
@@ -553,7 +590,7 @@ main .container {
 	-webkit-align-items: center;
 	align-items: center;
 	font-size: 1.8rem;
-	font-weight: bold;
+	font-weight: 500;
 	height: 100%;
 }
 .menu ul li {
@@ -564,7 +601,10 @@ main .container {
 	height: 100%;
 }
 .gallery {
-	padding-bottom: 6rem;
+	padding-bottom: 5rem;
+	background-image: url("../img/bg1.jpg");
+	-ms-background-size: cover;
+	background-size: cover;
 }
 .gallery_wrapper {
 	display: -ms-grid;
@@ -626,6 +666,7 @@ main .container {
 }
 .price h4 span {
 	opacity: 0;
+	display: block;
 }
 .price .col-sm-4 {
 	margin-bottom: 5rem;
@@ -661,6 +702,9 @@ main .container {
 	color: #762b10;
 	letter-spacing: .03em;
 	padding-bottom: 10rem;
+	background-image: url("../img/bg2.jpg");
+	-ms-background-size: cover;
+	background-size: cover;
 }
 .personal .row {
 	margin-bottom: 6rem;
@@ -729,9 +773,9 @@ main .container {
 }
 .promo {
 	color: #762b10;
-}
-.promo {
-	background-image: url("../img/promo_bg.jpg");
+	-ms-background-size: cover;
+	background-size: cover;
+	background-image: url("../img/bg3.jpg");
 }
 .promo h3 {
 	margin-bottom: 5rem;
